tests/success/match_to_type_reference_const_propagation.bz
function foo(: &const *const int32);

function main()
{
	let i = 0;

	let p: *int32 = &i;

	foo(p);
}
